--- a/docs/index.css
+++ b/docs/index.css
@@ -12,6 +12,15 @@ body {
 	overflow: hidden;
 	color: #F5F4F4;
 }
+h1 {
+	margin: 0;
+}
+h2 {
+	margin: 0;
+}
+h2 + p {
+	margin-left: 8px;
+}
 .code-element {
 	color: #ff82eaff;
 }
@@ -37,20 +46,21 @@ body {
 	background: #147487
 }
 .code-block {
-	flex: 1 0;
 	width: 100%;
 	height: 300px;
-	display: flex;
+	display: inline-block;
 	padding: 0 16px;
 	overflow: auto;
-	align-items: flex-start;
 	border-radius: 4px;
 	background-color: var(--color-dark);
-	-webkit-user-select: contain;
-	user-select: contain;
-	line-height: 75%;
+	line-height: 150%;
 	tab-size: 4;
-	margin-bottom: 16px;
+	margin: 0;
+	border: var(--color-primary) 1px solid;
+	list-style: none;
+}
+.code-block > li {
+	display: block;
 }
 .code-block::-webkit-scrollbar {
 	height: 8px;
@@ -75,15 +85,14 @@ body {
 	display: none;
 }
 .code-examples {
-	flex: 0 0 auto;
-	width: 100%;
+	height: 300px;
+	width: calc(100% - 32px);
 	display: flex;
-	align-self: flex-start;
-	margin-top: 16px;
-	align-items: center;
+	margin: 16px 0;
+	flex-direction: column;
+	justify-content: start;
+	align-items: start;
 	font-family: "monospace";
-	flex-direction: row;
-	justify-content: left;
 }
 .code-examples > span {
 	font-size: 72px;
@@ -101,7 +110,6 @@ header {
 	align-items: center;
 	display: flex;
 	flex-direction: row;
-	
 }
 header > h1 {
 	margin-left: 16px;
@@ -119,8 +127,8 @@ header > .icon-container {
 	justify-content: center;
 }
 header svg {
-	width: 64px;
-	height: 64px;
+	width: 48px;
+	height: 48px;
 	fill: var(--color-light);
 }
 header svg:hover {
@@ -133,13 +141,17 @@ header svg:active {
 	display: flex;
 	overflow: auto;
 	flex-direction: column;
-	margin: 4px;
-	padding: 12px;
 	position: absolute;
 	left: 0;
 	top: 100px;
 	right: 0;
 	bottom: 0;
+}
+#content > div {
+	display: flex;
+	flex-direction: column;
+	margin: 4px;
+	padding: 12px;
 }
 #content::-webkit-scrollbar {
 	height: 4px;
@@ -166,4 +178,42 @@ header svg:active {
 #content > p {
 	margin-left: 8px;
 	margin-bottom: 16px;
+}
+.tabs {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 8px;
+	user-select: none;
+	-webkit-user-select: none;
+}
+.tabs .tab {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	margin: 0;
+	padding: 8px 16px;
+	border-radius: 8px 8px 0 0;
+	border: var(--color-primary) 1px solid;
+	border-bottom: none;
+}
+.tabs .tab.active {
+	background: var(--color-primary);
+	color: var(--color-light);
+}
+a {
+	color: var(--color-secondary);
+	text-decoration: none;
+}
+a:hover {
+	color: var(--color-secondary-dark);
+	text-decoration: underline;
+}
+footer {
+	margin-top: 50px;
+	min-height: 100px;
+	background: linear-gradient(var(--color-primary-dark), var(--color-primary));
+}
+h4 {
+	margin: 8px 0 0 8px;
 }
